<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.elahe.randomuser.view.CustomImageView
        android:id="@+id/userImv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundAsCircle="true"/>

    <TextView
        android:id="@+id/userNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textAppearance="?textAppearanceHeadline6"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/userImv"
        app:layout_constraintTop_toTopOf="@+id/userImv"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/genderTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBody2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/userNameTv"
        app:layout_constraintTop_toBottomOf="@+id/userNameTv"
        tools:text="@string/gender"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/locationTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBody2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/genderTv"
        app:layout_constraintTop_toBottomOf="@+id/genderTv"
        tools:text="@string/address" />
</androidx.constraintlayout.widget.ConstraintLayout>