<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <ImageView
                    android:id="@+id/backIv"
                    android:layout_width="?actionBarSize"
                    android:layout_height="?actionBarSize"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_back"
                    app:tint="@color/black" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <com.elahe.randomuser.view.CustomImageView
            android:id="@+id/userIV"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:roundAsCircle="true" />

        <TextView
            android:id="@+id/userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textAppearance="?textAppearanceHeadline6"
            android:textColor="@color/black"
            tools:text="@string/name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/emailIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_email"
                app:tint="?colorPrimary" />

            <TextView
                android:id="@+id/emailTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/email_title"
                android:textAppearance="?textAppearanceBody2"
                android:textColor="?colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/emailIv"
                app:layout_constraintStart_toEndOf="@+id/emailIv"
                app:layout_constraintTop_toTopOf="@+id/emailIv" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="?dividerColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailIv" />

            <TextView
                android:id="@+id/emailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="@+id/emailTitleTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/emailTitleTv"
                tools:text="@string/email" />

            <ImageView
                android:id="@+id/phoneIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                app:srcCompat="@drawable/ic_phone"
                app:tint="?colorPrimary" />

            <TextView
                android:id="@+id/phoneTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/phone_title"
                android:textAppearance="?textAppearanceBody2"
                android:textColor="?colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/phoneIv"
                app:layout_constraintStart_toEndOf="@+id/phoneIv"
                app:layout_constraintTop_toTopOf="@+id/phoneIv" />

            <TextView
                android:id="@+id/phoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="@+id/phoneTitleTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/phoneTitleTv"
                tools:text="@string/phone" />

            <View
                android:id="@+id/view5"
                android:layout_width="411dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="?dividerColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneIv" />

            <ImageView
                android:id="@+id/locationIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5"
                app:srcCompat="@drawable/ic_location"
                app:tint="?colorPrimary" />

            <TextView
                android:id="@+id/locationTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/location"
                android:textAppearance="?textAppearanceBody2"
                android:textColor="?colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/locationIv"
                app:layout_constraintStart_toEndOf="@+id/locationIv" />

            <TextView
                android:id="@+id/locationTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="@+id/locationTitleTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/locationTitleTv"
                tools:text="@string/address" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>